# tokenomics

./: .gitignore  LICENSE  README.md  completion_advanced_benchmark.py  completion_benchmark.py  completion_simple_benchmark.py  embedding_benchmark.py  enhanced_benchmark.py  oai_server_benchmark.py  plot_advanced_benchmark.py  plot_benchmark.py  plot_completion_benchmark.py  plot_embedding_benchmark.py  plot_enhanced_benchmark.py  plot_throughput.py  pyproject.toml  requirements.txt  run_aime_benchmark.py  run_benchmark.sh  run_embedding_benchmark.sh  run_lora_benchmark.sh  sglang_run_server.sh  vllm_run_server.sh
examples/data/: sample_prompts.txt  short_prompts.txt
examples/dataset_configs/: aime25.json  aime_simple.json  alpaca.json  arena_hard.json  chartqa.json  csv_dataset.json  custom_prompts.json  docvqa.json  gsm8k.json  huggingface_custom.json  huggingface_squad.json  humaneval.json  json_dataset.json  lcb.json  local_prompts.json  long_context_test.json  math500.json  mbpp.json  mtbench.json  short_prompts.json  vqa_rad.json
sampling/: __init__.py  dataset.py  sampler.py
server/: sglang_run_server.sh  sglang_with_lora.sh  vllm_run_server.sh
test/: README.md  test_server.py
tokenomics/: __init__.py  __main__.py  cli.py  completion_benchmark.py  embedding_benchmark.py  io.py  plot_completion_benchmark.py  plot_embedding_benchmark.py
tokenomics/sampling/: __init__.py  dataset.py  images.py  sampler.py  scenarios.py
