[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenomics"
dynamic = ["version"]
description = "LLM inference benchmarking toolkit"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Liquid AI" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=3.2.0",
    "openai",
    "matplotlib",
    "aiohttp",
    "numpy",
    "tokenizers",
]

[project.urls]
Homepage = "https://github.com/LiquidAI/tokenomics"

[tool.hatch.version]
path = "tokenomics/__init__.py"

[tool.hatch.build.targets.wheel.force-include]
"examples" = "tokenomics/examples"

[project.scripts]
tokenomics = "tokenomics.cli:main"
